--- a/layout/header.html
+++ b/layout/header.html
@@ -29,12 +29,12 @@
         </div>
 
         <ul id="navbar">
-            <li><a class="active" href="..//">Home</a></li>
-            <li><a href="../web">Web</a></li>
-            <li><a href="../tools">Tools</a></li>
-            <li><a href="../services">Services</a></li>
-            <li><a href="../help">Help</a></li>
-            <li><a href="../about">About</a></li>
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/web">Web</a></li>
+            <li><a href="/tools">Tools</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/help">Help</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </div>
 </header>
