--- a/static/assets/css/slider.css
+++ b/static/assets/css/slider.css
@@ -1,6 +1,6 @@
 .slider-container {
     overflow: hidden;
-    width: 100%;
+    display: block;
 }
 
 .slider {
@@ -17,7 +17,7 @@
 
 .slider .slide img {
     position: absolute;
-    /* aspect-ratio: 16/5; */
+    aspect-ratio: 16/5;
     width: 100%;
     height: 100%;
 }
